# risc-mpc

./: Cargo.toml  README.md  build.rs
examples/: mean_salary_party0.rs  mean_salary_party1.rs  party0.rs  party1.rs  psi_party0.rs  psi_party1.rs
presentation/: README.md  slides.bib  slides.typ  style.typ
src/: channel.rs  co_ot.rs  error.rs  instruction.rs  lib.rs  memory.rs  mpc_executor.rs  ot.rs  party.rs  program.rs  registers.rs  triple_provider.rs  types.rs
src/ot/: alsz.rs  chou_orlandi.rs  mod.rs  naor_pinkas.rs
src/ot/utils/: aes_hash.rs  aes_rng.rs  block.rs  mod.rs
tests/: tests.rs
thesis/: style.typ  thesis.typ
