[package]
name = "risc-mpc"
version = "0.1.0"
edition = "2021"
description = "A gernal purpose RISC-V multi party computation virtual machine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt"] }
tsyncp = "0.3.0"
log = "0.4.20"
env_logger = "0.10.0"
bit = "0.1.1"
sha3 = "0.10.8"
rug = { version = "1.22.0", features = ["serde", "integer"] }
thiserror = "1.0.56"
intmap = "2.0.0"

[dev-dependencies]
mockall = "0.12.1"
